--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ before_script:
 script:
   - docker --version # print the version for logging
   - docker build -t travis_env_var_exercise .
-  - docker tag travis_env_var_exercise YOUR_DOCKER_HUB/travis_env_var_exercise:latest
+  - docker tag simple-node asmaamosleh/simple-node:latest
 
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push YOUR_DOCKER_HUB/travis_env_var_exercise
+  - docker push asmaamosleh/simple-node
