--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_script:
 
 script:
   - docker --version # print the version for logging
-  - docker build -t travis_env_var_exercise .
+  - docker build -t simple-node .
   - docker tag simple-node asmaamosleh/simple-node:latest
 
 after_success:
