--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,9 @@ before_script:
 
 script:
   - docker --version # print the version for logging
-  - docker build -t simple-node .
-  - docker tag simple-node asmaamosleh/simple-node:latest
+  - docker build -t travis_env_var_exercise .
+  - docker tag simple-node asmaamosleh/travis_env_var_exercise:latest
 
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push asmaamosleh/simple-node
+  - docker push asmaamosleh/travis_env_var_exercise
