--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ script:
   - docker --version # print the version for logging
   - docker build -t travis_env_var_exercise .
   - docker tag travis_env_var_exercise asmaamosleh/travis_env_var_exercise:latest
+  - node server.js
 
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
