--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ script:
   - docker --version # print the version for logging
   - docker build -t travis_env_var_exercise .
   - docker tag travis_env_var_exercise asmaamosleh/travis_env_var_exercise:latest
+  - export FAVORITE_FOOD="$FAVORITE_FOOD"
   - node server.js
 
 after_success:
